# CoTra

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/Modules/: FindFmt.cmake
coromem/: CMakeLists.txt
coromem/include/: backend.h  hugepage.h  hwtopo.h  reorder.h  share_mem.h  threadpool.h  utils.h
coromem/include/galois/: atomic_op.h  bag.h  config.h  fixsize_ring.h  gstl.h  large_array.h  lazy_array.h  lazy_object.h  loops.h  mem.h  method_flags.h  no_deref_Iter.h  optional.h  priority_queue.h  reduction.h  traits.h  user_context.h
coromem/include/runtime/: context.h  corobj.h  do_all.h  do_all_double.h  do_all_standby.h  mem.h  on_each.h  optref_types.h  range.h
coromem/include/substrate/: barrier.h  cacheline_storage.h  compiler_specific.h  coro_lock.h  numa_mem.h  padded_lock.h  ptr_lock.h  simple_lock.h  termination.h
coromem/include/worklists/: balance_queue.h  chunk.h  lockfreeQ.h  obim.h  worklist.h
coromem/src/: backend.cpp  barrier.cpp  barrier_mcs.cpp  context.cpp  hugepage.cpp  hwtopo.cpp  mem.cpp  numa_mem.cpp  ptr_lock.cpp  share_mem.cpp  simple_lock.cpp  termination.cpp  threadpool.cpp  utils.cpp
include/anns/: anns_config.h  anns_param.h  bruteforce.h  exec_query.h  hash_table.h  query_msg.h  scala_scheduler.h  scala_search.h  search_interface.h  space_ip.h  space_l2.h  task_manager.h  vec_buffer.h  visited_list_pool.h
include/index/: b1_graph.h  disk_utils.h  graph_index.h  index_param.h  kmeans.h  math_utils.h  partition.h  scala_build.h  scala_graph.h  top_index.h
include/index/vamana/: vamana.h
include/rdma/: get_clock.h  ip_config.h  profiler.h  rdma_comm.h  rdma_config.h  rdma_context.h  rdma_param.h  server_connect.h
scripts/: clear_cache.sh  create_hnsw_as_top_index.sh  ip_w1043.conf  ip_w1043_8m.conf  ip_w32.conf  ip_w32_8m.conf  ip_w33-40.conf  ip_w33-48.conf  ip_w41-48.conf  restart_memcache.sh
scripts/deep/: 1000M_16P_scala_anns.sh  1000M_16P_scala_index.sh  1000M_16P_shnot_index.sh  100M_16P_48D_scala_index.sh  100M_16P_Kshnot_anns.sh  100M_16P_Kshnot_index.sh  100M_16P_scala_anns.sh  100M_16P_scala_index.sh  100M_16P_shnot_anns.sh  100M_16P_shnot_index.sh  100M_16P_single_anns.sh  100M_8P_scala_anns.sh  100M_8P_scala_index.sh  100M_8P_shnot_anns.sh  100M_8P_shnot_index.sh  100M_8P_single_anns.sh  10M_16P_Kshnot_anns.sh  10M_16P_Kshnot_index.sh  10M_16P_scala_anns.sh  10M_16P_scala_index.sh  10M_16P_shnot_anns.sh  10M_16P_shnot_index.sh  10M_16P_single_anns.sh  vamana_anns_10M_4P.sh  vamana_anns_10M_8P.sh  vamana_index_10M_4P.sh  vamana_index_10M_8P.sh
scripts/erdma_16nodes/: ip_16nodes.conf  scala_index_16nodes.sh  stop_all.sh
scripts/erdma_2nodes/: ip_2nodes.conf  scala_index_2nodes.sh  stop_all.sh
scripts/laion/: 100M_16P_Kshnot_anns.sh  100M_16P_Kshnot_index.sh  100M_16P_scala_anns.sh  100M_16P_scala_index.sh  100M_16P_shnot_anns.sh  100M_16P_single_anns.sh  100M_8P_scala_anns.sh  100M_8P_shnot_index.sh
scripts/sift/: 1000M_16P_scala_anns.sh  1000M_16P_scala_index.sh  1000M_16P_shnot_anns.sh  1000M_16P_shnot_index.sh  100M_16P_48D_scala_anns.sh  100M_16P_48D_scala_index.sh  100M_16P_48D_single_anns.sh  100M_16P_Kshnot_anns.sh  100M_16P_Kshnot_index.sh  100M_16P_scala_anns.sh  100M_16P_scala_index.sh  100M_16P_shnot_anns.sh  100M_16P_shnot_index.sh  100M_16P_single_anns.sh  100M_8P_scala_anns.sh  100M_8P_scala_index.sh  100M_8P_shnot_anns.sh  100M_8P_shnot_index.sh  100M_8P_single_anns.sh  10M_16P_Kshnot_anns.sh  10M_16P_Kshnot_index.sh  10M_8P_scala_anns.sh  10M_8P_scala_index.sh  10M_8P_shnot_anns.sh  10M_8P_shnot_index.sh  10M_8P_single_anns.sh  250M_4P_scala_index.sh  250M_4P_shnot_index.sh  500M_8P_scala_anns.sh  500M_8P_scala_index.sh  500M_8P_shnot_index.sh  scala_anns_sift.sh  scala_index_sift.sh  sift_search_test.sh
scripts/text2image/: 100M_16P_Kshnot_anns.sh  100M_16P_Kshnot_index.sh  100M_16P_scala_anns.sh  100M_16P_scala_index.sh  100M_16P_shnot_anns.sh  100M_16P_shnot_index.sh  100M_8P_scala_anns.sh  100M_8P_scala_index.sh  100M_8P_shnot_anns.sh  100M_8P_shnot_index.sh  100M_8P_single_anns.sh  1B_16P_shnot_index.sh
src/: get_clock.cc  load_data_utils.cc
src/anns/: anns_param.cc
src/index/: disk_utils.cc  index_param.cc  math_utils.cc  partition.cc  scala_build.cc  top_index.cc
src/rdma/: ip_config.cc  rdma_comm.cc  rdma_context.cc  rdma_param.cc  server_connect.cc
tests/: CMakeLists.txt  scala_anns.cc  scala_index.cc
tests/anns/: CMakeLists.txt  log.cc  test_bq.cc  test_hashmap.cc  test_querymsg.cc
tests/index/: CMakeLists.txt  ampl_query.cc  create_hnsw_top.cc  kmeans_cluster.cc  kmeans_reorder.cc  profiling.cc  top_index.cc  trans_hnsw_top.cc
tests/rdma/: CMakeLists.txt  for_test.cc  test_bw.cc  test_pool.cc  test_read.cc  test_send.cc  test_write.cc
